# IsometricShooterCpp

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  assets.cpp  assets.h  engine.cpp  engine.h  main.cpp  mainmenu.h  state.h
src/engine/: CMakeLists.txt  actor.cpp  actor.h  assets.cpp  assets.h  box.h  engine.cpp  engine.h  projection.cpp  projection.h  renderer.cpp  renderer.h  shapes.h  state.h  world.cpp  world.h
src/engine/render/: renderer.cpp  renderer.h  shapes.h
src/game/: CMakeLists.txt  mainmenu.cpp  mainmenu.h
